# context-use

./: .env.base.example  .env.docker.example  .env.tests.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  biome.json  docker-compose.yml  package.json  pyproject.toml  quickstart.py  tsconfig.json
.github/: CONTRIBUTING.md
.github/actions/prepare/: action.yml
.github/actions/prepare-tests/: action.yml
.github/workflows/: build.yml  check-pr-title.yml  codestyle.yml  prepare-release.yml  publish.yml  test.yml
context_use/: __init__.py  config.py  core.py  main.py  prompt_categories.py  types.py
context_use/activitystreams/: __init__.py  activities.py  actors.py  core.py  links.py  objects.py
context_use/agent/: backend.py  protocol.py  runner.py  skill.py  system.md  tools.py
context_use/agent/skills/: process_thread.md  synthesise.md  user_profile.md
context_use/asset_description/: extractor.py  factory.py  manager.py  prompt.py  states.py
context_use/batch/: __init__.py  factory.py  grouper.py  manager.py  models.py  policy.py  registry.py  runner.py  states.py
context_use/cli/: __init__.py  app.py  bank_setup.py  base.py  config.py  output.py
context_use/cli/commands/: __init__.py  agent.py  ask.py  config.py  describe.py  embed.py  ingest.py  memories.py  pipeline.py  proxy.py  reset.py  search.py
context_use/core/: __init__.py  etl.py  exceptions.py  types.py
context_use/db/: __init__.py  base.py  models.py  postgres.py  sqlite.py
context_use/etl/core/: __init__.py  etl.py  exceptions.py  loader.py  pipe.py  types.py
context_use/etl/models/: __init__.py  archive.py  base.py  etl_task.py  thread.py
context_use/etl/payload/: __init__.py  builders.py  core.py  models.py
context_use/etl/providers/: base.py  registry.py
context_use/eval/: llm_judge.py  metrics.py  prompt_io.py  runner.py
context_use/evals/: judge.py  metrics.py  types.py
context_use/evals/longmemeval/: dataset.py  ingest.py  runner.py  schema.py
context_use/ext/: __init__.py
context_use/ext/mcp_use/: __init__.py  run.py  server.py
context_use/facade/: __init__.py  core.py  types.py
context_use/facets/: descriptor.py  embedding.py  linker.py  prompt.py  types.py
context_use/llm/: __init__.py  base.py  gemini.py  litellm.py  models.py
context_use/llm/gemini/: __init__.py
context_use/llm/litellm/: clients.py  config.py  llm.py  models.py
context_use/memories/: __init__.py  config.py  context.py  embedding.py  extractor.py  factory.py  manager.py  models.py  profile.py  prompt.py  providers.py  registry.py  service.py  states.py
context_use/memories/agent/: skill.py  system.md
context_use/memories/prompt/: __init__.py  activity.py  agent.py  base.py  conversation.py  media.py  search.py
context_use/memories/refinement/: backend.py  discovery.py  factory.py  manager.py  prompt.md  prompt.py  states.py  tools.py
context_use/models/: __init__.py  archive.py  base.py  batch.py  etl_task.py  facet.py  memory.py  profile.py  thread.py  user_profile.py  utils.py
context_use/payload/: __init__.py  builders.py  core.py  models.py
context_use/pipelines/memory_candidates/: __init__.py  extractor.py  factory.py  manager.py  prompt.py  states.py
context_use/profile/: __init__.py  generator.py  models.py  prompt.py  rules.py  trigger.py
context_use/providers/: __init__.py  base.py  registry.py  types.py
context_use/providers/airbnb/: __init__.py  messages.py  reservations.py  reviews.py  schemas.py  searches.py  wishlists.py
context_use/providers/amex/: __init__.py
context_use/providers/bank/: __init__.py  generic_pipe.py  mapping.py  pipe.py  record.py  (+2 more)
context_use/proxy/: __init__.py  app.py  background.py  enrichment.py  handler.py  headers.py  log.py  threads.py
context_use/search/: __init__.py  memories.py
context_use/server/: app.py
context_use/storage/: __init__.py  base.py  disk.py  gcs.py  memory.py
context_use/store/: __init__.py  base.py  memory.py  postgres.py
context_use/testing/: __init__.py  fixtures.py  payload_mixins.py  pipe_test_kit.py
context_use/thread_embedding/: embedding.py  factory.py  manager.py  states.py
demo/: proxied.sh  raw.sh
docs/: add-provider.md  etl-pipeline.md  exploration-autoresearch-for-memories.md  memory-pipeline.md  testing.md
docs/add-provider/: 1-schema-generation.md  2-extraction.md  3-testing.md  3-transformation.md  AGENTS.md
evals/: judge.py  metrics.py
evals/longmemeval/: dataset.py  ingest.py  runner.py  schema.py
scripts/: bumped-version.sh  eval_loop.py  eval_rate.py  eval_run.py  generate-changelog.sh  prepare-tests.sh  run-tests.sh  run_longmemeval.py  shutdown-tests.sh  start-local.sh  stop-local.sh
skills/context-use/: SKILL.md
skills/context-use-etl/: SKILL.md
src/: cli.ts  config.ts  index.ts
src/contextuse/: __init__.py  config.py
src/core/: etl.ts  exceptions.ts  types.ts
src/db/: backend.ts  postgres.ts  schema.sql  schema.ts  sqlite.ts
src/payload/: builders.ts  models.ts
src/providers/: registry.ts
src/storage/: backend.ts  disk.ts  s3.ts
tests/: agent.py  chatgpt-extraction.test.ts  chatgpt-transform.test.ts  conftest.py  db.test.ts  e2e-chatgpt.test.ts  e2e-errors.test.ts  e2e-instagram.test.ts  e2e_memories_pipeline.py  e2e_profile.py  e2e_refinement.py  etl-core.test.ts  fixtures.ts  instagram-extraction.test.ts  instagram-transform.test.ts  payload.test.ts  search_memories.py  smoke_test_memories.py  smoke_test_memories_batch.py  storage.test.ts  test_chatgpt_conversations.py  test_chatgpt_extraction.py  test_chatgpt_transform.py  test_db.py  test_db_sqlite.py  test_e2e_chatgpt.py  test_e2e_errors.py  test_e2e_instagram.py  test_etl_core.py  test_instagram_extraction.py  test_instagram_media.py  test_instagram_transform.py  test_payload.py  test_pipe.py  test_registry.py  test_storage_disk.py  test_store_memory.py
tests/ext/: agent.py  mcp_server.py
tests/integration/: conftest.py  test_e2e_chatgpt.py  test_e2e_errors.py
tests/unit/: test_config.py  test_pipe.py  test_storage_disk.py
(+534 files in other folders)
