[project]
name = "context-use"
version = "0.6.0"
description = "Turn your data exports into portable AI memory."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "ijson>=3.0",
    "tenacity>=9.1.4",
    "litellm>=1.81.13",
    "sqlite-vec>=0.1.6",
    "google-adk>=1.22",
]

[project.urls]
Homepage = "https://context-use.com"
Repository = "https://github.com/onfabric/context-use"
Changelog = "https://github.com/onfabric/context-use/blob/main/CHANGELOG.md"
Issues = "https://github.com/onfabric/context-use/issues"

[project.optional-dependencies]
gcs = ["google-cloud-storage>=2.10.0,<3"]
proxy = ["fastapi>=0.135.1", "uvicorn[standard]>=0.41"]

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "ruff>=0.15.1",
    "pytest>=8.0",
    "pytest-cov",
    "pytest-asyncio",
    "pre-commit>=4.5.1",
    # All optional extras included so Pyright can resolve every import.
    "context-use[gcs,proxy]",
    "git-cliff>=2.12.0",
    "twine>=6.2.0",
    "check-wheel-contents>=0.6.3",
    "commitlint>=1.13.3",
    "genson>=1.3.0",
    "datamodel-code-generator>=0.55.0",
]

[project.scripts]
context-use = "context_use.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
    "context_use/",
    "CHANGELOG.md",
    "LICENSE",
    "README.md",
]

[tool.hatch.build.targets.wheel]
packages = ["context_use"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: integration tests",
    "eval: evaluation tests that call a real LLM and require OPENAI_API_KEY",
]

[tool.ruff]
# Same as Black.
line-length = 88
indent-width = 4

[tool.pyright]
typeCheckingMode = "standard"
include = ["context_use", "tests"]
exclude = [
    ".venv/",
    ".venv*/",
    ".git/",
    "__pycache__/",
    "**/site-packages/",
]
venvPath = "."
venv = ".venv"
reportMissingTypeStubs = false

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"
# Like Black, indent with spaces, rather than tabs.
indent-style = "space"
# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false
# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"
# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = false
# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"

[tool.check-wheel-contents]
toplevel = ["context_use"]

[tool.uv]
package = true
required-version = ">=0.10.3"

[tool.git-cliff.changelog]
body = """
{% if version %}\
    ## [{{ version | trim_start_matches(pat="v") }}] - {{ timestamp | date(format="%Y-%m-%d") }}
{% else %}\
    ## [unreleased]
{% endif %}\
{% for group, commits in commits | group_by(attribute="group") %}
    ### {{ group | striptags | trim | upper_first }}
    {% for commit in commits %}
        - {% if commit.scope %}*({{ commit.scope }})* {% endif %}\
            {% if commit.breaking %}[**breaking**] {% endif %}\
            {{ commit.message | upper_first }}\
    {% endfor %}
{% endfor %}
"""
trim = true
render_always = true
postprocessors = []

[tool.git-cliff.bump]
features_always_bump_minor = true
breaking_always_bump_major = false

[tool.git-cliff.git]
conventional_commits = true
filter_unconventional = true
require_conventional = false
split_commits = false
commit_preprocessors = []
protect_breaking_commits = false
commit_parsers = [
    { message = "^feat", group = "<!-- 0 -->🚀 Features" },
    { message = "^fix", group = "<!-- 1 -->🐛 Bug Fixes" },
    { message = "^doc", group = "<!-- 3 -->📚 Documentation" },
    { message = "^perf", group = "<!-- 4 -->⚡ Performance" },
    { message = "^refactor", group = "<!-- 2 -->🚜 Refactor" },
    { message = "^style", group = "<!-- 5 -->🎨 Styling" },
    { message = "^test", group = "<!-- 6 -->🧪 Testing" },
    { message = "^chore\\(release\\): prepare for", skip = true },
    { message = "^chore\\(deps.*\\)", skip = true },
    { message = "^chore\\(pr\\)", skip = true },
    { message = "^chore\\(pull\\)", skip = true },
    { message = "^chore|^ci", group = "<!-- 7 -->⚙️ Miscellaneous Tasks" },
    { body = ".*security", group = "<!-- 8 -->🛡️ Security" },
    { message = "^revert", group = "<!-- 9 -->◀️ Revert" },
    { message = ".*", group = "<!-- 10 -->💼 Other" },
]
filter_commits = false
fail_on_unmatched_commit = false
link_parsers = []
use_branch_tags = false
topo_order = false
topo_order_commits = true
sort_commits = "newest"
recurse_submodules = false
